# GolfBallTracking

./: .gitignore  .gitmodules  CMakeLists.txt  DOCKER_GUIDE.md  Dockerfile  README.md  WINDOWS_SETUP.md  build.sh  build_windows.bat  classes.txt  docker-compose.yml  requirements.txt  run_calibration.sh  run_camera.bat  run_detector.bat  run_docker.sh  track2.py  track3.py  track_sim.py  windows_setup_guide.md
build_scripts/: build_linux.sh  build_windows.bat  download_onnxruntime.bat  generate_vs_solution.bat
calibration/: CMakeLists.txt  build_calibration.sh  calibration_script.py  run_master_slave_calibration.sh  run_python_calibration.sh
calibration/include/: calibrator.h  stereo_calibrator.h
calibration/src/: calibrate_camera_main.cpp  calibrator.cpp  stereo_calibration_main.cpp  stereo_calibrator.cpp
calibration_results/: master_calibration.yaml  slave_calibration.yaml
common/: CMakeLists.txt
common/include/: camera_params.h  image_utils.h  path_utils.h
common/src/: camera_params.cpp  image_utils.cpp  path_utils.cpp
detector/: CMakeLists.txt
detector/include/: logging.h  onnx_detector.h  preprocessor.h  simple_onnx_detector.h  stereo_onnx_detector.h
detector/src/: logging.cpp  onnx_detector.cpp  preprocessor.cpp  simple_onnx_detector.cpp  stereo_onnx_detector.cpp
docs/: calibration_and_detection_guide.md
python_track/: run_comparison.sh  track3.py  track_onnx.py  track_simple_predict.py
run_scripts/: run_detector.sh  test_calibration.bat  test_calibration.sh
scripts/: run_calibration.bat.in  run_calibration.sh.in  run_detector.bat.in  run_detector.sh.in  run_preprocessor.bat.in  run_preprocessor.sh.in
src/: CMakeLists-windows.txt  CMakeLists.txt  build_and_run.sh  detection_test_app.cpp  enhanced_detector_main.cpp  onnx_detector.cpp  preprocessor_main.cpp  run_detection_test_app.sh  run_onnx_detector.sh  run_simple_onnx_detector.sh  run_stereo_detection_test_app.sh  stereo_detection_test_app.cpp
stereo_calibration/: stereo_calibration.py  stereo_calibration_README.md  stereo_pipeline.py  stereo_reconstruction.py  test.ipynb  visualize_calibration.py
stereo_calibration/calibration_results/: master_calibration_8mm.npz  slave_calibration_8mm.npz
stereo_calibration/reconstruction/: corners_3d.npy  point_cloud.npy
test/: CMakeLists.txt  build_test.sh  test_calibration_image.sh  test_detectors.sh
test/src/: test_calibration_image.cpp  test_detector.cpp
track/: CMakeLists.txt  README.md  yolo_bytetrack_integration.cpp
